2012-08-21  Kihong Kwon  <kihong.kwon@samsung.com>

        [EFL][GTK][BlackBerry] Fix build error in the DeviceOrientationClient
        https://bugs.webkit.org/show_bug.cgi?id=94586

        Reviewed by Kentaro Hara.

        Fix build error in the DeviceOrientationClientEfl.cpp.
        It is occured because DeviceOrientation is changed to DeviceOrientationData in the WebCore.

        * WebCoreSupport/DeviceOrientationClientEfl.cpp:
        (WebCore::DeviceOrientationClientEfl::lastOrientation):

2012-08-20  Thiago Marcos P. Santos  <thiago.santos@intel.com>

        Regression(r124945): Build is broken when touch events is disabled
        https://bugs.webkit.org/show_bug.cgi?id=94466

        Reviewed by Kenneth Rohde Christiansen.

        Added missing guards around touch events code.

        * ewk/ewk_touch_event.cpp:
        * ewk/ewk_touch_event_private.h:

2012-08-17  Thiago Marcos P. Santos  <thiago.santos@intel.com>

        [EFL] Change font family/script on layout tests causes flakiness
        https://bugs.webkit.org/show_bug.cgi?id=94327

        Reviewed by Kenneth Rohde Christiansen.

        Always set the font on WebCore even if the font family is the same. It
        has to be done because the script value might have also changed.
        Settings::set*FontFamily() has an implicit UScriptCode
        parameter that will set the script back to the defaults.

        * ewk/ewk_view.cpp:
        (ewk_view_font_family_name_set):

2012-08-14  Adam Barth  <abarth@webkit.org>

        Delete Frame::domWindow() and Frame::existingDOMWindow()
        https://bugs.webkit.org/show_bug.cgi?id=93990

        Reviewed by Eric Seidel.

        * WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
        (DumpRenderTreeSupportEfl::pendingUnloadEventCount):
        * ewk/ewk_frame.cpp:
        (ewk_frame_intent_deliver):

2012-08-13  Tom Sepez  <tsepez@chromium.org>
